<resources>

<!--  HabitAppInfo  -->
    <string name="app_name">HabitTracker</string>
    <string name="menu_habit_name">Habit</string>
    <string name="menu_info_app">Info</string>

<!--  DrawerLayout  -->
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>

<!--  FragmentCreateHabit  -->
    <string name="period_text">Recurrence period</string>
    <string name="description">Description</string>
    <string name="name_habit">Name habit</string>
    <string name="count_text">Count day</string>
    <string name="type_text">Type</string>
    <string name="priority_text">Priority</string>
    <string name="cansel">CANSEL</string>
    <string name="ok">OK</string>
    <string name="color_picker_stub">HSV: \nHEX: \nINT: </string>

<!--  HabitListFragment  -->
    <string name="habit_menu_remove">Remove</string>
    <string name="habit_menu_edit">Edit</string>
    <string name="habit_remove_dialog_ok">OK</string>
    <string name="habit_remove_dialog_cansel">CANSEL</string>
    <string name="habit_remove_dialog_msg">Want to remove a habit?</string>

<!--  HabitViewHolder  -->
    <string name="infoHabit">[priority -  %1$s; type -  %2$s; count -  %3$s; period -  %4$s day]</string>

<!--  ColorPickerHabit  -->
    <string name="infoColor">INT: %1$s \nHEX: 0x%2$s \nHSV %3$s</string>

<!--  PriorityHabit  -->
    <string name="hardText">HARD</string>
    <string name="mediumText">MEDIUM</string>
    <string name="lowText">LOW</string>

    <string name="goodText">GOOD</string>
    <string name="badText">BAD</string>

<!--  FilterBottomSheet  -->
    <string name="header_bottom_sheet_filter">Search and filters</string>
    <string name="hint_name_habit_filter">Filter by name habit</string>
    <string name="hint_description_habit_filter">Filter by description habit</string>
    <string name="name_button_reset">RESET</string>

<!--  HabitItemDefault  -->
    <string name="habit_name_default">Habit name</string>
    <string name="habit_description_default">Description</string>
    <string name="habit_info_default">[priority - low; type - good; count - 7; period - 1 day]</string>

<!--  InfoFragment  -->
    <string name="info_app">User: %1$s\nId: %2$s\nBoard: %3$s\nBrand: %4$s\nDevice: %5$s\nBootloader: %6$s\nDisplay: %7$s\nFingerprint: %8$s\nHardware: %9$s\nHost: %10$s\nManufacturer: %11$s\nModel: %12$s\nProduct: %13$s\nЯ не очень хочу выводить сюда информацию о приложении, ибо не совсем понимаю что именно хотят от меня увидеть, кроме номера версии, поэтому вывожу это)</string>


</resources>