<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/filter_bottom_sheet_background"
    android:orientation="vertical">

    <TextView
        style="@style/AboutBottomSheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_left_margin"
        android:text="@string/header_bottom_sheet_filter" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_sheet_separation_line_height"
        android:background="?attr/colorPrimary" />

    <EditText
        android:id="@+id/filterByNameHabit"
        style="@style/TextFilterNameHabit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_left_margin"
        android:layout_marginEnd="@dimen/text_left_margin"
        android:hint="@string/hint_name_habit_filter"
        android:inputType="text" />

    <EditText
        android:id="@+id/filterByDescriptionHabit"
        style="@style/TextFilterDescriptionHabit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_left_margin"
        android:layout_marginEnd="@dimen/text_left_margin"
        android:hint="@string/hint_description_habit_filter"
        android:inputType="text" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/filterByPriorityHabit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"

            android:layout_marginStart="@dimen/text_left_margin"
            android:layout_marginTop="@dimen/text_left_margin"
            android:layout_marginEnd="@dimen/text_left_margin"
            android:layout_marginBottom="@dimen/text_left_margin"
            android:backgroundTint="?attr/colorPrimary"
            android:dropDownSelector="@drawable/ic_spinner_arrow_24" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/name_button_reset" />
    </RelativeLayout>
</LinearLayout>